@@ -1,4 +1,3 @@
-Remove FunctionalChaosSobolIndices.getSobolGrouped(Total)Index(int) for 1.21
 Drop deprecated static CorrelationAnalysis::PearsonCorrelation|SpearmanCorrelation|PCC|PRCC
 Remove Distribution.getStandardMoment
 Drop deprecated LinearModelAlgorithm | LinearModelStepwiseAlgorithm ctors for 1.21
@@ -11,5 +10,4 @@ Remove IterativeMoments::getCenteredMoments
 Drop deprecated GeneralLinearModelAlgorithm | KrigingAlgorithm ctors for 1.21
 Drop deprecated Drawable.draw|clean & Graph.draw|clean|getRCommand|makeR*|GetExtensionMap methods
 Drop deprecated GaussianProcess.GIBBS
-Remove FunctionalChaosSobolIndices::summary
 Remove FunctionalChaosResult Function ctor
